--- a/Test.css
+++ b/Test.css
@@ -9,6 +9,7 @@
 body { 
     background-color: #dba510 ;
     align-items: center;
+    text-align: center; 
 
     
 }
@@ -25,6 +26,17 @@ header > h1 {
     font-family: Asap, sans-serif;
 }
 
+.final-score { 
+    margin: 20px auto;
+    border: 3px solid white; 
+    border-radius: 4px;
+    width: 200px; 
+    font-size: 46px;
+    text-align: center;
+    padding: 15px 20px;
+    font-family: Asap,sans-serif;
+    position: relative;
+}
 
 .Score-Board { 
     margin: 20px auto;
@@ -59,6 +71,8 @@ header > h1 {
 }
 
 .result { 
+    margin-top: 50px; 
+    margin-bottom : 50px;
     font-size: 40px; 
     color: white;
 }
@@ -87,6 +101,7 @@ header > h1 {
 
 #action-message 
  { 
+     margin-bottom: 500 px; 
     text-align: center;
     color: white; 
     font-family: Asap, sans-serif;
@@ -99,17 +114,42 @@ header > h1 {
 .green-glow { 
     border: 4px solid #4dcc7d;
     box-shadow: 0 0 10px #31b43a; 
-    transition: 0.3s;
+    
 }
 
 .red-glow { 
     border: 4px solid #fc121b; 
     box-shadow: 0 0 10px #d01115; 
-    transition: 0.3s; 
+    
 }
 
 .gray-glow { 
     border: 4px solid #464647; 
     box-shadow: 0 0 10px #25292b;
-    transition: 0.3s; 
+     
+}
+#gambler { 
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 20px;  
+    background-color: #dba510 ;
+    border-radius: 20%; 
+    font-size: 16px; 
+    color: white;
+    margin-top: 30px ;
+    border-color: rgb(255, 255, 255); 
+
+}
+#finalScore-user { 
+    background-color: #374c74;
+    color: white;
+    font-size: 14px;
+    padding: 2px 10px; 
+    font-family: Asap, sans-serif;
+
+}
+.play-again { 
+    text-align: center;
+
 }
