--- a/Test.css
+++ b/Test.css
@@ -1,155 +1,165 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,700;1,400&display=swap');
-* 
-{ 
-  margin:0; 
-  padding: 0; 
-  box-sizing: border-box;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
 }
-body { 
-    background-color: #dba510 ;
+
+body {
+    background-color: #dba510;
     align-items: center;
-    text-align: center; 
+    text-align: center;
 
-    
+
 }
+
 header {
-    background: white; 
-    padding: 20;  
-} 
+    background: white;
+    padding: 20px;
+}
 
 
 header > h1 {
 
-    color: #25272E; 
+    color: #25272E;
     text-align: center;
     font-family: Asap, sans-serif;
 }
 
-.final-score { 
+.final-score {
     margin: 20px auto;
-    border: 3px solid white; 
+    border: 3px solid white;
     border-radius: 4px;
-    width: 200px; 
+    width: 200px;
+    font-size: 46px;
+    text-align: center;
+    padding: 15px 50px;
+    font-family: Asap, sans-serif;
+    position: relative;
+    bottom: 500px;
+
+}
+
+.Score-Board {
+    margin: 20px auto;
+    border: 3px solid white;
+    border-radius: 4px;
+    width: 200px;
     font-size: 46px;
     text-align: center;
     padding: 15px 20px;
-    font-family: Asap,sans-serif;
+    font-family: Asap, sans-serif;
     position: relative;
 }
 
-.Score-Board { 
-    margin: 20px auto;
-    border: 3px solid white; 
-    border-radius: 4px;
-    width: 200px; 
-    font-size: 46px;
-    text-align: center;
-    padding: 15px 20px;
-    font-family: Asap,sans-serif;
-    position: relative;
-}
-
-.badge { 
+.badge {
     background-color: #374c74;
     color: white;
     font-size: 14px;
-    padding: 2px 10px; 
+    padding: 2px 10px;
     font-family: Asap, sans-serif;
 
 }
-#user-label { 
+
+#user-label {
     position: absolute;
-    top:30px; 
+    top: 30px;
     left: -25px;
 }
 
-#computer-label { 
+#computer-label {
     position: absolute;
-    top:30px; 
+    top: 30px;
     right: -30px;
 }
 
-.result { 
-    margin-top: 50px; 
-    margin-bottom : 50px;
-    font-size: 40px; 
+.result {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-size: 40px;
     color: white;
 }
-.result > p { 
+
+.result > p {
     text-align: center;
 }
-.choices { 
-    margin-top: 50px 0; 
+
+.choices {
+    margin-top: 50px;
     text-align: center;
-    
+
 }
-.choice { 
-    display: inline-block; 
-    border: 4px solid white; 
+
+.choice {
+    display: inline-block;
+    border: 4px solid white;
     border-radius: 50%;
-    padding: 25px; 
-    margin: 0 20px; 
+    padding: 25px;
+    margin: 0 20px;
     transition: all 0.3s;
 }
 
-.choice:hover { 
+.choice:hover {
     cursor: pointer;
     background-color: rgb(201, 132, 30);
 
 }
 
-#action-message 
- { 
-     margin-bottom: 500 px; 
+#action-message {
+    margin-bottom: 500px;
     text-align: center;
-    color: white; 
+    color: white;
     font-family: Asap, sans-serif;
     font-size: 20px;
     font-weight: bold;
-    margin-top: 20px; 
-    
+    margin-top: 20px;
+
 }
 
-.green-glow { 
+.green-glow {
     border: 4px solid #4dcc7d;
-    box-shadow: 0 0 10px #31b43a; 
-    
+    box-shadow: 0 0 10px #31b43a;
+
 }
 
-.red-glow { 
-    border: 4px solid #fc121b; 
-    box-shadow: 0 0 10px #d01115; 
-    
+.red-glow {
+    border: 4px solid #fc121b;
+    box-shadow: 0 0 10px #d01115;
+
 }
 
-.gray-glow { 
-    border: 4px solid #464647; 
+.gray-glow {
+    border: 4px solid #464647;
     box-shadow: 0 0 10px #25292b;
-     
+
 }
-#gambler { 
+
+#gambler {
     display: inline-block;
     text-align: center;
     vertical-align: middle;
-    line-height: 20px;  
-    background-color: #dba510 ;
-    border-radius: 20%; 
-    font-size: 16px; 
+    line-height: 20px;
+    background-color: #dba510;
+    border-radius: 20%;
+    font-size: 16px;
     color: white;
-    margin-top: 30px ;
-    border-color: rgb(255, 255, 255); 
+    margin-top: 10px;
+    border-color: rgb(255, 255, 255);
+
 
 }
-#finalScore-user { 
-    background-color: #374c74;
-    color: white;
-    font-size: 14px;
-    padding: 2px 10px; 
-    font-family: Asap, sans-serif;
 
-}
-.play-again { 
+/*#finalScore-user {*/
+/*    background-color: #374c74;*/
+/*    color: white;*/
+/*    font-size: 14px;*/
+/*    padding: 2px 10px;*/
+/*    font-family: Asap, sans-serif;*/
+
+/*}*/
+.fun-Buttons {
+    bottom: 700px;
     text-align: center;
-
 }
